client/src/app.scss
@use "./ui/base/typography";
@use "./ui/base/reset";
@use "./ui/base/themes";
@use "./ui/base/prism";

/*
  Global :root variables, for those independent of themes
*/
:root {
  /* Typography */
  --font-fallback: BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-sans;

  --font-body: Inter, var(--font-fallback);
  --font-heading: Montserrat, var(--font-fallback);
  --font-code: Consolas, "Courier New", monospace;
  --font-size: 16px;
  --font-line-height: 1.2;

  --type-heading-l: 600 1rem/1.1875 var(--font-heading); /* 16px/19px */
  --type-title-l: 600 1.5rem/1.2 var(--font-heading);
  --type-title-s: 600 0.8125rem/1.2 var(--font-body);
  --type-body-l: 400 1rem/1.1875 var(--font-body); /* 16px/19px */
  --type-body-m: 400 0.8125rem/1.23 var(--font-body); /* 13px/16px */
  --type-body-s: 500 0.6875rem/1.273 var(--font-body); /* 11px/14px */
  --type-emphasis-l: 600 1rem/1.1875 var(--font-body); /* 16px/19px */
  --type-emphasis-m: 600 0.8125rem/1.23 var(--font-body); /* 13px/16px */
  --type-label-s: 600 0.625rem/1.2 var(--font-heading); /* 10px/12px */
  --type-code-regular: 400 0.875rem/1.5 var(--font-code); /* 14px/21px */

  /* Grid and Layout */
  --max-width: 1440px;
  --gutter: 0.5rem; /* Space between content and browser window */

  --z-index-back: -1;
  --z-index-top: 9999;
  --z-index-mid: 500;
  --z-index-low: 100;

  /* Features */
  --elem-radius: 0.25rem;
  --focus-effect: 0 0 0 3px var(--accent-primary-engage);
  --form-elem-height: 2rem;

  /* Major Components */
  --top-nav-height: 4rem;
  --icon-size: 1rem;
}

body {
  background-color: var(--background-primary);
  color: var(--text-primary);

  ::selection {
    background-color: var(--text-primary);
    color: var(--background-primary);
  }
}

main {
  min-height: 80vh;
}

.visually-hidden {
  font: 0/0 a;
  padding: 0 !important;
  margin: 0 !important;
  height: 0;
  color: transparent;
}

pre {
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

a {
  color: var(--text-link);
}

